# canon-ixus-870-is-webcam

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.local.json
bridge/: CMakeLists.txt  vcpkg.json
bridge/.claude/: settings.local.json
bridge/chdk_mic/: CMakeLists.txt  chdk_mic.cpp
bridge/driver/: canon_chdk.cat  install_driver7.ps1  reinstall_driver.ps1  reset_usb.ps1
bridge/src/: main.cpp
bridge/src/ptp/: ptp_client.cpp  ptp_client.h
bridge/src/webcam/: audio_output.cpp  audio_output.h  av_recorder.cpp  av_recorder.h  frame_processor.cpp  h264_decoder.cpp  h264_decoder.h  preview_window.cpp  preview_window.h  virtual_mic.cpp  virtual_mic.h  virtual_webcam.cpp
chdk-official/: PS.FI2  camnotes.txt  fmath.lua
chdk-official-full/: readme.txt
chdk-official-full/CHDK/SCRIPTS/TEST/: drawtest.lua
chdk/CHDK/MODULES/: 4wins.flt  _dng.flt  edgeovr.flt  exmemins.flt  fwcrc.flt  mastmind.flt  memview.flt  reversi.flt  scrdump.flt  tetris.flt  webcam.flt  zebra.flt
chdk/core/: ptp.c  ptp.h
chdk/doc/: 2_installation.txt  3_faq.txt  4_urls.txt
chdk/lib/font/: font_8x16_uni_packed.h
chdk/lib/lang/: lang_str.h
chdk/loader/ixus870_sd880/: main.bin.dump  main.elf
chdk/modules/: exportlist.inc  module_exportlist.h  module_hashlist.c  module_load.c  webcam.c  webcam.h
chdk/modules/.o/: 4wins.elf  _confmig.elf  _dng.elf  _hexbox.elf  _osd_le.elf  _osd_le.flt  _rawop.elf  _rawop.flt  _tbox.elf  benchm.elf  benchm.flt  calend.elf  cpuinfo.elf  curves.elf  edgeovr.elf  exmemins.elf  eyefi.elf  fselect.elf  fselect.flt  fshelter.elf  fwcrc.elf  grids.elf  grids.flt  histo.elf  histo.flt  lua.elf  lua.flt  mastmind.elf  mdetect.elf  mdetect.flt  memview.elf  modinsp.elf  mpopup.elf  palette.elf  rawevhst.elf  rawevhst.flt  reversi.elf  scrdump.elf  shothist.elf  snake.elf  (+14 more)
chdk/platform/a2500/: notes.txt
chdk/platform/g5x/: notes.txt
chdk/platform/g7x/: notes.txt
chdk/platform/g7x2/sub/110b/: boot.c  stubs_entry.S  stubs_entry_2.S
chdk/platform/ixus175_elph180/: notes.txt
chdk/platform/ixus180_elph190/sub/100a/: filewrite.c
chdk/platform/ixus870_sd880/sub/100e/: bin_compat.h  main.bin.dump  main.elf
chdk/platform/ixus870_sd880/sub/101a/: bin_compat.h  filewrite.c  main.bin.dump  main.elf  movie_rec.c  stubs_auto.S  stubs_entry.S
chdk/platform/m10/: notes.txt
chdk/platform/m3/: notes.txt
chdk/platform/sx150is/: notes.txt
chdk/platform/sx280hs/: notes.txt
chdk/platform/sx730hs/: notes.txt
chdk/tools/: capdis  code_gen  code_gen2  dancingbits  finsig_dryos  finsig_thumb2  finsig_vxworks  font_8x16_pack  gen_conf_lua  gensig_dryos  gensig_vxworks  makeexport  makelang  pakwif
chdk/tools/elf2flt/: elf2flt  fltdump
chdk/tools/packfi2/: fi2enc
docs/: architecture.md  camera-and-chdk.md  debug-frame-protocol.md  development-log.md  firmware-reverse-engineering.md  getting-started.md  proven-facts.md  webcam-development-log.md
firmware-analysis/: DecompileAudioDMA.java  DecompileAudioDMAPath.java  DecompileAudioFIFO.java  DecompileAudioHardware.java  DecompileAudioPipeline.java  DecompileCallback0xA0.java  DecompileCallbacks.java  DecompileIDRArchitecture.java  DecompileMovWriter.java  DecompileMovieRecord.java  DecompileMsg5Functions.java  DecompileMsg5Handler.java  DecompileQualityCaller.java  DecompileRecSIO.java  DecompileSIODMA.java  DecompileSIOISR.java  DecompileSIOInterrupt.java  DecompileWritePipeline.java  FindRingBuf50Writers.java  ReadAudioAddresses.java  ReadDataValues.java  ReadSIOTables.java  audio_addresses.txt  audio_dma_decompiled.txt  audio_dma_path_decompiled.txt  audio_fifo_decompiled.txt  audio_hardware_decompiled.txt  audio_pipeline_decompiled.txt  callback_0xa0_analysis.txt  callbacks_decompiled.txt  decompile_mjpeg.py  filter_0x5c.ps1  find_callers.ps1  idr_architecture_decompiled.txt  movwriter_decompiled.txt  msg5_functions_decompiled.txt  msg5_handler_decompiled.txt  quality_caller_decompiled.txt  read_jpcore_tables.ps1  read_rom_callbacks.ps1  (+14 more)
firmware-analysis/ghidra_project/ixus870_101a.rep/: project.prp
firmware-analysis/ghidra_project/ixus870_101a.rep/idata/: ~index.bak
firmware-analysis/ghidra_project/ixus870_101a.rep/idata/00/: 00000000.prp
firmware-dumps/IXUS - SD Series/: ixus870_sd880_100e.7z  ixus870_sd880_101a.7z  ixus870_sd880_102b.7z
firmware-update/: Firminfo.txt  IXY_920.FI2
